--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://the-grill-out.neocities.org/tiledbg.jpg');
+    background-image: url('/dryp-pinksmokeseamless-JPG.jpg');
     background-color: #FFADFF;
     color: black;
     font-family: 'Atkinson Hyperlegible', Arial, sans-serif;
