--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@ a:active {
 }
 
 .container {
-    width: 800px;
+    width: 1200px;
     margin: 0 auto;
-    background-color: #FFFFFF;
+    background-color: #793a80;
     padding: 20px;
     border-radius: 15px;
     border: 1px solid #ccc;
@@ -40,7 +40,7 @@ a:active {
 }
 
 .header, .footer, .content, .sidebar {
-    background-color: #E6E6FA;
+    background-color: #fd2785;
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 10px;
