--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ a:active {
 .container {
     width: 800px;
     margin: 0 auto;
-    background-color: #793a80;
+    background-color: #c6008b;
     padding: 20px;
     border-radius: 15px;
     border: 1px solid #ccc;
@@ -56,7 +56,7 @@ a:active {
 }
 
 .content {
-    background-color: #ffffff;
+    background-color: #c6008b;
     padding: 15px;
 }
 
