--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-image: url('/dryp-pinksmokeseamless-JPG.jpg');
     background-color: #FFADFF;
-    color: black;
+    color: white;
     font-family: 'Atkinson Hyperlegible', Arial, sans-serif;
 }
 
@@ -30,10 +30,10 @@ a:active {
 .container {
     width: 800px;
     margin: 0 auto;
-    background-color: #c6008b;
+    background-color: #000000;
     padding: 20px;
     border-radius: 15px;
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -56,7 +56,7 @@ a:active {
 }
 
 .content {
-    background-color: #c6008b;
+    background-color: #000000;
     padding: 15px;
 }
 
