--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-image: url('/dryp-pinksmokeseamless-JPG.jpg');
     background-color: #FFADFF;
-    color: white;
+    color: #f800ae;
     font-family: 'Atkinson Hyperlegible', Arial, sans-serif;
 }
 
@@ -30,7 +30,7 @@ a:active {
 .container {
     width: 800px;
     margin: 0 auto;
-    background-color: #000000;
+    background-color: #490032;
     padding: 20px;
     border-radius: 15px;
     border: 0px solid #ccc;
@@ -56,7 +56,7 @@ a:active {
 }
 
 .content {
-    background-color: #000000;
+    background-color: #490032;
     padding: 15px;
 }
 
