--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-image: url('/dryp-pinksmokeseamless-JPG.jpg');
     background-color: #FFADFF;
-    color: #f800ae;
+    color: White;
     font-family: 'Atkinson Hyperlegible', Arial, sans-serif;
 }
 
@@ -30,7 +30,7 @@ a:active {
 .container {
     width: 800px;
     margin: 0 auto;
-    background-color: #490032;
+    background-color: #000000;
     padding: 20px;
     border-radius: 15px;
     border: 0px solid #ccc;
@@ -48,7 +48,7 @@ a:active {
 
 .sidebar {
     width: 130px;
-    background-color: #FEBCFE;
+    background-color: #f800ae;
     background-size: cover;
     border-radius: 15px 0 0 15px;
     background-repeat: no-repeat;
@@ -56,7 +56,7 @@ a:active {
 }
 
 .content {
-    background-color: #490032;
+    background-color: #000000;
     padding: 15px;
 }
 
